--- a/_includes/more.html
+++ b/_includes/more.html
@@ -6,3 +6,7 @@
     </div>
   </div>
 </div>
+
+<p align="center">
+  <img width="10%" height="10%" src="https://github.com/zhidanluo/zhidanluo.github.io/blob/master/images/dream.jpg"/>
+</p>
